    on how to document source code.
  * An RDoc::Require is now always listed at the file level.  Patch by Thierry
    Lambert.
  * RDoc::CodeObjects now know which file they were defined in.
  * RDoc::Options calls ::setup_options on the generator class specified by
    <tt>--format</tt>.  See RDoc::Options::setup_generator.
  * rdoc gives an error when multiple formats are given.
* Bug fixes
  * RDoc::Generator tests no longer require any installed RDoc on Ruby 1.9
  * Load existing cache before generating ri.  Ruby r27749 by NAKAMURA Usaku.
  * RDoc now handles BOM.  Ruby r28062 by Nobuyoshi Nakada.
  * Use proper XML encoding for darkfish classpage.  Ruby r28083 by NARUSE,
    Yui.
  * Fix ri output when special characters are inside html tags.  Patch by Tomo
    Kazahaya, Ruby Bug #3512.
  * Don't bother checking if the pager exists, it's already done.  Ruby r28842
    by NAKAMURA Usaku.
  * RDoc::Parser::Ruby now ignores non-constant-named singleton classes.  Ruby
    r29140 by Nobuyoshi Nakada.  Ruby Bug #3759.
  * RDoc::Parser::Ruby call args no longer include assignment.  Ruby r29141 by
    Nobuyoshi Nakada.  Ruby Bug #3759
  * Handle $HOME being unset in ri.  Ruby r29272 by Nobuyoshi Nakada.
  * uniq ancestors and modules too.  Ruby r29312 by Nobuyoshi Nakada.
  * RDoc now knows about Encoding by default.  Ruby r29356 by Nobuyoshi
    Nakada.
  * ri now defaults to the backspace formatter when piped.  Use RI environment
    variable or options to override. Ruby r28455 by Yusuke Endoh.

=== 2.5.11 / 2010-08-20

* Minor Enhancements
  * Alias comments are now discovered by the C parser.  Reported by Jeremy
    Evans.
  * Removed --all option which is unused in RDoc.  Use the nodoc or
    stopdoc/startdoc directives to suppress documentation instead.

=== 2.5.10 / 2010-08-17

* Minor Enhancements
  * Support rb_singleton_class().  Reported by Jeremy Evans.
  * Support rb_define_private_method() on rb_singleton_class().  Reported by
    Jeremy Evans.
