@@ -11,25 +11,6 @@ class TestRDocParser < MiniTest::Unit::TestCase
     @binary_dat = File.expand_path '../binary.dat', __FILE__
   end
 
-  def test_class_binary_eh_erb
-    erb = File.join Dir.tmpdir, "test_rdoc_parser_#{$$}.erb"
-    open erb, 'wb' do |io|
-      io.write 'blah blah <%= stuff %> <% more stuff %>'
-    end
-
-    assert @RP.binary?(erb)
-
-    erb_rb = File.join Dir.tmpdir, "test_rdoc_parser_#{$$}.erb.rb"
-    open erb_rb, 'wb' do |io|
-      io.write 'blah blah <%= stuff %>'
-    end
-
-    refute @RP.binary?(erb_rb)
-  ensure
-    File.unlink erb
-    File.unlink erb_rb if erb_rb
-  end
-
   def test_class_binary_eh_marshal
     marshal = File.join Dir.tmpdir, "test_rdoc_parser_#{$$}.marshal"
     open marshal, 'wb' do |io|
